--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,20 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript">
-    var refreshTweet = setInterval(tweetTimer,10000);
+    var refreshTweet = setInterval(tweetTimer,5000);
     function tweetTimer() {
         $.ajax({
             url: "/yolo",
             success: function(data) {
-                $("#tweet").html(data);
+                var dec = eval("(" + data + ")");
+                $("#tweet").html(dec.text + "<br/><br/><b>" + dec.author + "</b> Madness index: " + dec.madness);
+                var madness_lookup = [
+                    "#ffffff",
+                    "#ffcccc",
+                    "#ffaaaa",
+                    "#ff8888",
+                    "#ff4444"]
+                $("body").attr("bgcolor", madness_lookup[dec.madness-1]);
             }
         });
     }
@@ -23,6 +31,13 @@ body {
 #container {
     margin:auto;
     width:700px;
+}
+
+hr {
+    border-style:solid;
+    border-width:0px;
+    border-top: 1px solid #444;
+    opacity:0.5;
 }
 
 #logo {
@@ -60,6 +75,7 @@ body {
     <div id="footer">R U Mad?</div>
     <hr/>
     <div id="tweet">Loading...</div>
+    <div id="production">A <a href="http://samphippen.com">Sam Phippen</a> and Stephen de Mora production.</div>
 </div>
 <script type="text/javascript">
     $(document).ready(function(){ tweetTimer(); });
