--- a/templates/index.html
+++ b/templates/index.html
@@ -66,19 +66,12 @@ hr {
 <title>#YOLO - r u Mad?</title>
 </head>
 
-<body>
-<div id="container">
-    <div id="logo">
-        #YOLO
-    </div>
-    <hr/>
-    <div id="footer">R U Mad?</div>
-    <hr/>
-    <div id="tweet">Loading...</div>
-    <div id="production">A <a href="http://samphippen.com">Sam Phippen</a> and Stephen de Mora production.</div>
-</div>
-<script type="text/javascript">
-    $(document).ready(function(){ tweetTimer(); });
-</script>
-</body>
-</html>
+<body> <div id="container"> <div id="logo"> #YOLO </div> <hr/> <div
+            id="footer">R U Mad?</div> <hr/> <div id="tweet">Loading...</div>
+        <div id="production">A <a href="http://samphippen.com">Sam Phippen</a>
+            and Stephen de Mora production.<br/> powered by the <a
+                href="http://www.musicmetric.com/"><img
+                src="http://static.semetric.com/images/logo/api/small_banner.png">
+                sentiment analyser</a>.</div> </div> <script
+        type="text/javascript"> $(document).ready(function(){ tweetTimer(); });
+</script> </body> </html>
