OMG THAT LOGO IS SO FUGLY
Signed-off-by: Sam Phippen <samphippen@googlemail.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,7 @@ hr {
             id="footer">R U Mad?</div> <hr/> <div id="tweet">Loading...</div>
         <div id="production">A <a href="http://samphippen.com">Sam Phippen</a>
             and Stephen de Mora production.<br/> powered by the <a
-                href="http://www.musicmetric.com/"><img
-                src="http://static.semetric.com/images/logo/api/small_banner.png">
+                href="http://www.musicmetric.com/">MusicMetric
                 sentiment analyser</a>.</div> </div> <script
         type="text/javascript"> $(document).ready(function(){ tweetTimer(); });
 </script> </body> </html>
