--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@ hr {
 <body> <div id="container"> <div id="logo"> #YOLO </div> <hr/> <div
             id="footer">R U Mad?</div> <hr/> <div id="tweet">Loading...</div>
         <div id="production">A <a href="http://samphippen.com">Sam Phippen</a>
-            and Stephen de Mora production.<br/> powered by the <a
+            and Stephen de Mora production.<br/> Powered by the <a
                 href="http://www.musicmetric.com/">MusicMetric
                 sentiment analyser</a>.</div> </div> <script
         type="text/javascript"> $(document).ready(function(){ tweetTimer(); });
